--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
       **/pl/morlinski/weather/openweathermap/Weather.java,**/pl/morlinski/weather/openweathermap/Wind.java,**/pl/morlinski/weather/openweathermap/Main.java,
       **/pl/morlinski/weather/openweathermap/Clouds.java,**/pl/morlinski/weather/openweathermap/Rain.java
     </sonar.coverage.exclusions>
+
+    <pi.deployDirectory>/home/pi/apps</pi.deployDirectory>
   </properties>
 
   <dependencies>
@@ -81,15 +83,6 @@
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-api</artifactId> 
-      <scope>test</scope> </dependency> <dependency> <groupId>org.junit.jupiter</groupId> 
-      <artifactId>junit-jupiter-engine</artifactId> <scope>test</scope> </dependency> 
-      <dependency> <groupId>org.junit.vintage</groupId> <artifactId>junit-vintage-engine</artifactId> 
-      <scope>test</scope> </dependency> <dependency> <groupId>org.junit.platform</groupId> 
-      <artifactId>junit-platform-launcher</artifactId> <version>1.1.0</version> 
-      <scope>test</scope> </dependency> <dependency> <groupId>org.junit.platform</groupId> 
-      <artifactId>junit-platform-runner</artifactId> <version>1.1.0</version> <scope>test</scope> 
-      </dependency -->
     <dependency>
       <groupId>com.googlecode.catch-exception</groupId>
       <artifactId>catch-exception</artifactId>
@@ -116,12 +109,44 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
-        <dependencies> <dependency> <groupId>org.junit.platform</groupId> <artifactId>junit-platform-surefire-provider</artifactId> 
-        <version>1.1.0</version> </dependency> <dependency> <groupId>org.junit.jupiter</groupId> 
-        <artifactId>junit-jupiter-engine</artifactId> <version>5.1.1</version> </dependency> 
-        </dependencies> </plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>server-copy</id>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <phase>install</phase>
+            <configuration>
+              <target>
+                <echo message="Deploying to server: ${pi.host}" />
+                <scp trust="true" failonerror="true" verbose="true"
+                  file="${project.build.directory}/${project.build.finalName}.jar"
+                  todir="${pi.user}@${pi.host}:${pi.deployDirectory}/${project.artifactId}.jar"
+                  port="${pi.port}" password="${pi.passwd}">
+                </scp>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-jsch</artifactId>
+            <version>1.10.1</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
+
   </build>
 
   <repositories>
@@ -137,4 +162,5 @@
       <layout>default</layout>
     </repository>
   </repositories>
+
 </project>
