--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>pl.morlinski</groupId>
   <artifactId>weather</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -27,6 +27,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
